Add alert messages

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,17 +49,44 @@
     </div>
   </nav>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        {% for message in messages %}
+        <div class="alert {{ message.tags }} alert-dismissible fade show text-center" id="msg" role="alert">
+          {{ message | safe }}
+          <button type="button" class="close" aria-label="Close">
+            <span aria-hidden="true" data-bs-dismiss="alert">&times;</span>
+          </button>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+
+
+  <main class="flex-shrink-0 main-bg">
   <!--Block content-->
   {% block content %}
 
   {% endblock %}
+</main>
+
 
 
   <footer class="card-footer text-white bg-dark">
     FOOTER
   </foote>
 
- 
+  <script>
+    setTimeout(function() {
+        let messages = document.getElementById("msg");
+        let alert = new bootstrap.Alert(messages);
+        alert.close();
+    }, 2000);
+  </script>
+
+
   <!-- Fontawesome -->
   <script src="https://kit.fontawesome.com/b9ef575fd8.js" crossorigin="anonymous"></script>
   <!-- jQuery and Bootstrap Bundle (includes Popper) -->
