Add footer section with styles

--- a/templates/base.html
+++ b/templates/base.html
@@ -90,9 +90,59 @@
 
 
 
-  <footer class="card-footer text-white bg-dark">
-    FOOTER
-  </foote>
+ 
+<!-- Footer -->
+<footer id="footer">
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
+        <!-- first column -->
+        <div class="col-lg-3 col-md-6">
+          <div class="footer-info">
+            <h3>De Jure Law Firm</h3>
+                <p><strong>"Experience, integrity, results"</strong></p>
+          </div>
+        </div>
+        <!-- second column -->
+        <div class="col-lg-3 col-md-6">
+          <div class="footer-info">
+            <h3>Address</h3>
+              <p>A108 Adam Street<br>NY 535022, USA</p>
+          </div>
+        </div>
+        <!-- third column -->
+        <div class="col-lg-3 col-md-6">
+          <div class="footer-info">
+            <h3>Contacts</h3>
+              <p><strong>Phone:</strong> +1 5589 55488 55<br>
+                 <strong>Email:</strong> info@example.com<br>
+              </p>
+          </div>
+        </div>
+        <!-- fourth column -->
+        <div class="col-lg-3 col-md-6">
+          <div class="footer-info">
+            <h3>Social Links</h3>
+            <div class="social-links mt-3">
+              <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!-- Copywrite Area -->
+  <div class="container">
+    <div class="copyright">
+      &copy; Copyright<strong><span>De Jure Law Firm</span></strong>
+      <script>document.write(new Date().getFullYear());</script>  
+      All Rights Reserved
+    </div>
+  </div>
+</footer>
 
   <script>
     setTimeout(function() {
