--- a/templates/base.html
+++ b/templates/base.html
@@ -65,32 +65,28 @@
         </nav>
     </header>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 offset-md-2">
-        {% for message in messages %}
+<!-- Alert messages -->
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      {% for message in messages %}
         <div class="alert {{ message.tags }} alert-dismissible fade show text-center" id="msg" role="alert">
-          {{ message | safe }}
-          <button type="button" class="close" aria-label="Close">
-            <span aria-hidden="true" data-bs-dismiss="alert">&times;</span>
-          </button>
+      {{ message | safe }}
+            <button type="button" class="close" aria-label="Close">
+              <span aria-hidden="true" data-bs-dismiss="alert">&times;</span>
+            </button>
         </div>
-        {% endfor %}
-      </div>
+      {% endfor %}
     </div>
   </div>
+</div>
 
-
-  <main class="flex-shrink-0 main-bg">
-  <!--Block content-->
+<main>
+<!--Block content-->
   {% block content %}
-
   {% endblock %}
 </main>
 
-
-
- 
 <!-- Footer -->
 <footer id="footer">
   <div class="footer-top">
@@ -144,23 +140,24 @@
   </div>
 </footer>
 
-  <script>
-    setTimeout(function() {
-        let messages = document.getElementById("msg");
-        let alert = new bootstrap.Alert(messages);
-        alert.close();
-    }, 2000);
-  </script>
+<!-- for alert messages -->
+<script>
+  setTimeout(function() {
+      let messages = document.getElementById("msg");
+      let alert = new bootstrap.Alert(messages);
+      alert.close();
+  }, 2000);
+</script>
 
+  <!-- Fontawesome -->
+    <script src="https://kit.fontawesome.com/b9ef575fd8.js" crossorigin="anonymous"></script>
+  <!-- jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
+    </script>
 
-<!-- Fontawesome -->
-<script src="https://kit.fontawesome.com/b9ef575fd8.js" crossorigin="anonymous"></script>
-<!-- jQuery and Bootstrap Bundle (includes Popper) -->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
-  </script>
-
+  </body>
 </html>
