Add about us section with styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,65 @@
     </div>
   </div>
 
+
+<!-- Why Us Section ======= -->
+<section id="why-us" class="why-us">
+  <div class="container" data-aos="fade-up">
+    <div class="section-title">
+      <h2>Why Us</h2>
+        <p>Why Choose Our Law Firm</p>
+    </div>
+  <div class="row">
+    <!-- first column -->
+    <div class="col-lg-4">
+      <div class="box" data-aos="zoom-in" data-aos-delay="100">
+        <span>01</span>
+          <h4>Experience & Expertise</h4>
+            <p>Our attorneys have a wealth of experience and expertise in a wide range of practice areas. </p>
+      </div>
+    </div>
+    <!-- second column -->
+    <div class="col-lg-4 mt-4 mt-lg-0">
+        <div class="box" data-aos="zoom-in" data-aos-delay="200">
+          <span>02</span>
+            <h4>Personalized Approach</h4>
+              <p>We understand each client's unique needs and goals, and we develop a personalized strategy </p>
+        </div>
+    </div>
+    <!-- third column -->
+      <div class="col-lg-4 mt-4 mt-lg-0">
+        <div class="box" data-aos="zoom-in" data-aos-delay="300">
+          <span>03</span>
+            <h4>Communication </h4>
+              <p>We are always available to answer our clients' questions and keep them informed about the status of their case.</p>
+        </div>
+      </div>
+    </div>
+    <br>
+  </div>
+</section>
+
+<!-- About Section -->
+<section id="about" class="about">
+  <div class="container" data-aos="fade-up">
+    <div class="row">
+      <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
+        <div class="about-img">
+          <img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678975992/pexels-august-de-richelieu-4427431_jj6erl.jpg" alt="team-de-jure">
+        </div>
+      </div>
+        <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
+          <h5>At our law firm, we are dedicated to providing our clients with the highest level of legal representation and guidance. Our team of experienced attorneys and staff are committed to helping our clients navigate even the most complex legal issues with ease.
+          </h5><br>
+          <h5> Our attorneys have a wealth of experience in a wide range of practice areas, including but not limited to personal injury, family law, criminal defense, and business law.
+          </h5><br>
+          <h5>We believe that open communication, trust, and mutual respect are essential components of a successful attorney-client relationship, and we strive to cultivate these values in every interaction.
+          </h5>
+        </div>
+    </div>
+  </div>
+</section>
+
         <!-- Blog Entries Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
