--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,42 @@
+/* general styles */
+body {
+    font-family: 'Noto Serif Lao', serif;
+}
+  
+.section-title {
+    padding-bottom: 40px;
+    padding: 20px 0 30px 0;
+}
+  
+.section-title h2 {
+    font-size: 14px;
+    font-weight: 500;
+    padding: 0;
+    line-height: 1px;
+    margin: 0 0 5px 0;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #aaaaaa;
+}
+  
+.section-title h2::after {
+    content: "";
+    width: 120px;
+    height: 1px;
+    display: inline-block;
+    background: rgba(255, 255, 255, 0.2);
+    margin: 4px 10px;
+}
+  
+.section-title p {
+    margin: 0;
+    margin: 0;
+    font-size: 36px;
+    font-weight: 700;
+    color: #cda45e;
+}
+  
 /* header */
-
 .navbar {
     background: #28251f;
     font-size: large;
@@ -34,6 +71,127 @@
   
 #background-text h5 {
     font-family: 'Tiro Devanagari Hindi', serif;
+}
+
+/* why us */
+.why-us, .team, .testimonial {
+    background: linear-gradient(115deg, #141313, #282A2B,  #5B3016)
+}
+
+.why-us .box {
+    padding: 50px 30px;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    transition: all ease-in-out 0.3s;
+    background: #1a1814;
+}
+  
+.why-us .box span {
+    display: block;
+    font-size: 28px;
+    font-weight: 700;
+    color: #cda45e;
+}
+  
+.why-us .box h4 {
+    font-size: 24px;
+    font-weight: 600;
+    padding: 0;
+    margin: 20px 0;
+    color: rgba(255, 255, 255, 0.8);
+}
+  
+.why-us .box p {
+    color: #aaaaaa;
+    font-size: 15px;
+    margin: 0;
+    padding: 0;
+}
+  
+.why-us .box:hover {
+    background: #cda45e;
+    padding: 30px 30px 70px 30px;
+    box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.18);
+}
+  
+.why-us .box:hover span, .why-us .box:hover h4, .why-us .box:hover p {
+    color: #fff;
+}
+  
+/* about us */
+.about {
+    background: url("https://res.cloudinary.com/dremtdt73/image/upload/v1678799935/download_7_nqlgkv.jpg") center center;
+    background-size: cover;
+    position: relative;
+    color: #fff;
+    padding: 80px 0;
+}
+  
+.about:before {
+    content: "";
+    background: rgba(0, 0, 0, 0.471);
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+  
+.about .about-img {
+    position: relative;
+    transition: 0.5s;
+}
+  
+.about .about-img img {
+    max-width: 100%;
+    height: 400px;
+    border: 4px solid rgba(255, 255, 255, 0.2);
+    position: relative;
+}
+  
+.about .about-img::before {
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    width: 60px;
+    height: 60px;
+    z-index: 1;
+    content: "";
+    border-left: 5px solid #cda45e;
+    border-top: 5px solid #cda45e;
+    transition: 0.5s;
+}
+  
+.about .about-img::after {
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    width: 60px;
+    height: 60px;
+    z-index: 2;
+    content: "";
+    border-right: 5px solid #cda45e;
+    border-bottom: 5px solid #cda45e;
+    transition: 0.5s;
+}
+  
+.about .about-img:hover {
+    transform: scale(1.03);
+}
+  
+.about .about-img:hover::before {
+    left: 10px;
+    top: 10px;
+}
+  
+.about .about-img:hover::after {
+    right: 10px;
+    bottom: 10px;
+}
+  
+@media (min-width: 1024px) {
+    .about {
+      background-attachment: fixed;
+    }
 }
 
 /* footer */
