--- a/templates/index.html
+++ b/templates/index.html
@@ -77,6 +77,83 @@
   </div>
 </section>
 
+<!-- Team Section-->
+<section id="team" class="team" >
+  <div class="container" data-aos="fade-up">
+    <div class="section-title">
+      <h2>Team</h2>
+      <p>Partners at De Jure Law Firm</p>
+    </div>
+  <div class="row pb-5 mb-4" id="team-section">
+  <!-- first card-->
+    <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+      <div class="card shadow-sm border-0 rounded" >
+        <div class="card-body p-0"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678890673/James-599x500_xiwsb5.jpg" alt="worker-de-jure" class="w-100 card-img-top">
+          <div class="p-4" id="card-team-body">
+            <h5 class="mb-0">JAMES MILNER</h5>
+              <p class="small text-muted">PARTNER</p>
+                <ul class="social mb-0 list-inline mt-3">
+                  <li class="list-inline-item m-0"><a href="#" class="social-link-team"><i class="fa fa-facebook-f"></i></a></li>
+                  <li class="list-inline-item m-0"><a href="#" class="social-link-team"><i class="fa fa-twitter"></i></a></li>
+                  <li class="list-inline-item m-0"><a href="#" class="social-link-team"><i class="fa fa-instagram"></i></a></li>
+                </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- second card-->
+    <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+        <div class="card shadow-sm border-0 rounded">
+          <div class="card-body p-0"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678890718/Jodan1-599x500_vnysqz.jpg" alt="worker-de-jure" class="w-100 card-img-top">
+            <div class="p-4" id="card-team-body">
+              <h5 class="mb-0">JODAN BROWN</h5>
+                <p class="small text-muted">PARTNER</p>
+                  <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0"><a href="#" class="social-link-team"><i class="fa fa-facebook-f"></i></a></li>
+                    <li class="list-inline-item m-0"><a href="#" class="social-link-team"><i class="fa fa-twitter"></i></a></li>
+                    <li class="list-inline-item m-0"><a href="#" class="social-link-team"><i class="fa fa-instagram"></i></a></li>
+                  </ul>
+            </div>
+          </div>
+        </div>
+    </div>
+  <!-- third card-->
+    <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+        <div class="card shadow-sm border-0 rounded">
+          <div class="card-body p-0"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678890799/Emma2-599x500_cgbd9g.jpg" alt="worker-de-jure" class="w-100 card-img-top">
+            <div class="p-4" id="card-team-body">
+              <h5 class="mb-0">MELANIE BUNTON</h5>
+                <p class="small text-muted">PARTNER</p>
+                  <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0"><a href="#" class="social-link-team"><i class="fa fa-facebook-f"></i></a></li>
+                    <li class="list-inline-item m-0"><a href="#" class="social-link-team"><i class="fa fa-twitter"></i></a></li>
+                    <li class="list-inline-item m-0"><a href="#" class="social-link-team"><i class="fa fa-instagram"></i></a></li>
+                  </ul>
+            </div>
+          </div>
+        </div>
+    </div>
+  <!-- fourth card -->
+    <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+        <div class="card shadow-sm border-0 rounded">
+          <div class="card-body p-0"><img src="https://res.cloudinary.com/dremtdt73/image/upload/v1678890752/joel1-599x500_njza6t.jpg" alt="worker-4" class="w-100 card-img-top">
+            <div class="p-4" id="card-team-body">
+              <h5 class="mb-0">JOHN HENDERSON</h5>
+                <p class="small text-muted">PARTNER</p>
+                  <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0"><a href="#" class="social-link-team"><i class="fa fa-facebook-f"></i></a></li>
+                    <li class="list-inline-item m-0"><a href="#" class="social-link-team"><i class="fa fa-twitter"></i></a></li>
+                    <li class="list-inline-item m-0"><a href="#" class="social-link-team"><i class="fa fa-instagram"></i></a></li>
+                  </ul>
+            </div>
+          </div>
+        </div>
+    </div>
+    </div>
+  </div>
+</section>
+
+
         <!-- Blog Entries Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
