Add styles for blog section and post details and add changes to blog section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -258,13 +258,126 @@ body {
 /* team */
 #team-section {
     padding: 0 30px 0 30px;
-  }
+}
   
 #card-team-body {
     text-align: center; 
     background-color: white;
-  }
+}
   
 .social-link-team {
-    color: #daa520;
-  }
+    color: #daa520;  
+}
+
+/* blog */
+.card {
+    border: none;
+    background-color: transparent;
+}
+  
+.image-container {
+    position: relative;
+}
+  
+.image-flash {
+    position: absolute;
+    bottom: 5%;
+    min-width: 30%;
+    left: -2px;
+    background-color: #cda45e;
+}
+  
+.author {
+    color: white;
+    margin: 4px;
+    text-transform: uppercase;
+}
+  
+.masthead {
+    margin-top: 10px;
+    overflow: hidden;
+    position: relative;
+    display: inline-block;
+    height: 33vh;
+    width: 100%;
+}
+  
+.masthead-text {
+    background-color: #cda45e;
+    color: white;
+    position: relative;
+}
+  
+.masthead-image {
+    position: relative;
+    overflow: hidden;
+}
+  
+.masthead-image:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 90%;
+    height: 100%;
+    width: 150%;
+    background: #cda45e;
+    -webkit-transform: skew(15deg);
+    -moz-transform: skew(15deg);
+    transform: skew(15deg);
+    z-index: 100;
+}
+  
+.post-link {
+    text-decoration: none;
+    color: #445261;
+}
+  
+.post-link:hover, .page-link {
+    color: #cda45e;
+}
+
+.post-subtitle {
+    margin-left: 5%;
+    color: #141313;
+}
+  
+.btn-signup {
+    background-color: #cda45e;
+    color: #fff;
+}
+  
+.btn-signup:hover, .btn-signup:active {
+    background-color: #fff;
+    color: #cda45e;
+}
+  
+.link {
+    color: #cda45e;
+    text-decoration: none;
+}
+  
+.link:hover, .link:active {
+    color: #445261;
+    text-decoration: underline;
+}
+  
+.btn-like {
+    color: #E84610;
+    border: none;
+    background: transparent;
+}
+  
+.btn-like:hover, .btn-like:active {
+    color: #E84610;
+    background: transparent;
+    border: none;
+}
+  
+.comments {
+    padding: 10px;
+}
+  
+.post-title {
+    text-align: center;
+}
+  
