Add testimonials of clients

--- a/templates/index.html
+++ b/templates/index.html
@@ -211,4 +211,169 @@
   </nav>
   {% endif %}
 </div>
+
+<!-- testimonials -->
+<section id="testimonial" class="testimonial" >
+  <div class="container-lg" data-aos="fade-up">
+    <div class="section-title col-sm-12">
+      <h2>testimonials</h2>
+      <p>What Our Clients Are Saying About Us</p>
+    </div>
+        <div class="row">        
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Carousel indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>   
+            <!-- Wrapper for carousel items -->
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row">
+                  <!-- first card -->
+                  <div class="col-sm-6">
+                    <div class="testimonial-wrapper">
+                      <div class="testimonial">"I was extremely impressed with the level of service I received from this law firm. The attorneys and staff were highly professional. They kept me informed throughout the entire legal process and provided me with expert guidance that helped me achieve the best possible outcome for my case."
+                      </div>    
+                        <div class="media-body">
+                          <div class="overview">
+                            <div class="name"><b>Paula Wilson</b></div>
+                              <div class="star-rating">
+                                <ul class="list-inline">
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                </ul>
+                              </div>
+                          </div>										
+                        </div>
+                    </div>								
+                  </div>
+                  <!-- second card -->
+                  <div class="col-sm-6">
+                    <div class="testimonial-wrapper">
+                      <div class="testimonial">"I had a great experience with this law firm. The lawyers were knowledgeable, compassionate, and always went above and beyond to ensure that my needs were met. They were able to achieve a positive outcome for my case, and I would highly recommend them to anyone in need of legal services."
+                      </div>
+                        <div class="media-body">
+                          <div class="overview">
+                            <div class="name"><b>Antonio Moreno</b>
+                            </div>
+                              <div class="star-rating">
+                                <ul class="list-inline">
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                </ul>
+                              </div>
+                          </div>
+                        </div>
+                    </div>								
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <div class="row">
+                  <!-- third card -->
+                  <div class="col-sm-6">
+                    <div class="testimonial-wrapper">
+                      <div class="testimonial">"The team at this law firm is exceptional. They are highly skilled and experienced, and they truly care about their clients. They provided me with expert guidance and support throughout the entire legal process, and I am extremely grateful for their hard work and dedication."
+                      </div>    
+                        <div class="media-body">
+                          <div class="overview">
+                            <div class="name"><b>Michael Holz</b></div>   										
+                              <div class="star-rating">
+                                <ul class="list-inline">
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                  <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                </ul>
+                              </div>
+                          </div>
+                        </div>
+                    </div>								
+                  </div>
+                  <!-- fourth card -->
+                    <div class="col-sm-6">
+                      <div class="testimonial-wrapper">
+                        <div class="testimonial">"I can say enough good things about this law firm. The attorneys and staff were highly professional and knowledgeable, and they made me feel like my case was their top priority. They were able to achieve a successful outcome for my case, and I would highly recommend them to anyone in need of legal services."
+                        </div>                        
+                          <div class="media-body">
+                            <div class="overview" >
+                              <div class="name"><b>Mary Saveley</b></div>  
+                                <div class="star-rating">
+                                  <ul class="list-inline">
+                                    <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                    <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                    <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                    <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                    <li class="list-inline-item"><i class="fa fa-star-o"></i></li>
+                                  </ul>
+                                </div>
+                            </div>										
+                          </div>
+                      </div>								
+                    </div>
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <div class="row">
+                  <!-- fifth card -->
+                    <div class="col-sm-6">
+                      <div class="testimonial-wrapper">
+                        <div class="testimonial">"I was extremely impressed with the level of service I received from this law firm. The attorneys and staff were highly professional. They kept me informed throughout the entire legal process and provided me with expert guidance that helped me achieve the best possible outcome for my case."
+                        </div>
+                          <div class="media-body">
+                            <div class="overview">
+                              <div class="name"><b>Martin Sommer</b></div> 
+                                <div class="star-rating">
+                                  <ul class="list-inline">
+                                    <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                    <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                    <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                    <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                    <li class="list-inline-item"><i class="fa fa-star-o"></i></li>
+                                  </ul>
+                                </div>
+                            </div>										
+                          </div>
+                      </div>								
+                    </div>
+                    <!-- sixth card -->
+                      <div class="col-sm-6">
+                        <div class="testimonial-wrapper">
+                          <div class="testimonial">"I had a wonderful experience with this law firm. The attorneys and staff were extremely attentive and responsive, and they provided me with expert guidance that helped me achieve a positive outcome for my case. I would highly recommend them to anyone in need of legal representation."
+                          </div>
+                            <div class="media-body">
+                              <div class="overview" >
+                                <div class="name"><b>John Williams</b></div>                                
+                                  <div class="star-rating">
+                                    <ul class="list-inline">
+                                      <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                      <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                      <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                      <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                      <li class="list-inline-item"><i class="fa fa-star"></i></li>
+                                    </ul>
+                                  </div>
+                              </div>										
+                            </div>
+                        </div>								
+                      </div>
+                    </div>			
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+</section>
+
 {%endblock%}
