--- a/static/css/style.css
+++ b/static/css/style.css
@@ -380,4 +380,91 @@ body {
 .post-title {
     text-align: center;
 }
+
+/* testimonials */
+.overview {
+    text-align: center;
+    color: black;
+}
+
+.carousel .carousel-item {
+      color: black;
+      overflow: hidden;
+      min-height: 120px;
+      font-size: 13px;
+}
+
+.carousel .media {
+      position: relative;
+      padding: 0 0 0 20px;
+}
+
+.carousel .media img {
+      width: 75px;
+      height: 75px;
+      display: block;
+      border-radius: 50%;
+}
+
+  .carousel .testimonial-wrapper {
+      padding: 0 10px;
+}
+
+  .carousel .testimonial {
+      color: black;
+      position: relative;
+      padding: 15px;
+      background: #f1f1f1;
+      border: 1px solid #efefef;
+      border-radius: 3px;
+      margin-bottom: 15px;
+}
+
+  .carousel .testimonial::after {
+      content: "";
+      width: 15px;
+      height: 15px;
+      display: block;
+      background: #f1f1f1;
+      border: 1px solid #efefef;
+      border-width: 0 0 1px 1px;
+      position: absolute;
+      bottom: -8px;
+      left: 46px;
+      transform: rotateZ(-46deg);
+}
+
+.carousel .star-rating li {
+      padding: 0 2px;
+}
+
+.carousel .star-rating i {
+      font-size: 16px;
+      color: #d89420;
+}
+.carousel .overview {
+      padding: 3px 0 0 15px;
+}
+.carousel .overview .details {
+      padding: 5px 0 8px;
+}
+  
+.carousel-indicators li, .carousel-indicators li.active {
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      margin: 1px 2px;
+      box-sizing: border-box;
+}
+
+.carousel-indicators li {	
+      background: #e2e2e2;
+      border: 4px solid #fff;
+}
+
+.carousel-indicators li.active {
+      color: #fff;
+      background: #cda45e;
+      border: 5px double;    
+}
   
