--- a/templates/booknow.html
+++ b/templates/booknow.html
@@ -7,23 +7,17 @@
 <div class="booknow-page d-flex justify-content-center">
     <div class="text-center p-5">
         <h2 class="bookings-title  mb-4">Book your appointment</h2>
-        {% if user.is_authenticated %}
-        <div class="booknow-contain text-left p-3">
-            <div class="mt-3">
-
-                <form method="POST" action="{% url 'booknow' %}" name="form">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-
-                    
-                        <button class="btn btn-outline-warning" type="submit">Submit
-                            Booking</button>
-                    
-                </form>
-            </div>
+            {% if user.is_authenticated %}
+            <div class="booknow-contain text-left p-3">
+                <div class="mt-3">
+                    <form method="POST" action="{% url 'booknow' %}" name="form">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button class="btn btn-outline-warning" type="submit">Submit Booking</button>
+                    </form>
+                </div>
             {% else %}
             <div class="booknow-block d-flex">
-
                 <div class="p-3  text-left">
                     <p>To make a reservation, please <a href="{% url 'account_login' %}">Login</a></p>
                     <p>If you have not created an account yet, then please <a href="{% url 'account_signup' %}">Sign up</a></p>
