--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
               <li class="nav-item "><a class="nav-link" id="nav-link" href="{% url 'home' %}" >Home</a></li>
               <li class="nav-item "><a class="nav-link" id="nav-link" href="#why-us" >About us</a></li>
               <li class="nav-item "><a class="nav-link" id="nav-link" href="#blog" >Blog</a></li>
-              <li class="nav-item "><a class="nav-link" id="nav-link" href="#" >Contact</a></li>
+              <li class="nav-item "><a class="nav-link" id="nav-link" href="{% url 'contact' %}" >Contact</a></li>
                 {% if request.user.is_authenticated %}
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
