Change contact us template

--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -1,23 +1,23 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block content %}
 
-<div class="container-fluid contact-us-container">
+{% block content %}
+<div class="container">
+    <div class="row mt-3">
+        <div class="col-md-8 mt-3 offset-md-2">
+            <h1 class="mb-4">Questions?</h1>
+            <h5>Fill in the form below and we'll come back to you shortly!</h5>
+        </div>
+    </div>
     <div class="row">
-        <div class="col-sm-8 col-md-6 offset-sm-2 offset-md-3">
-            <div class="card m-5 border-0">
-                <div class="card-body rounded text-white p-4 login-card">
-                    <h4 class="text-center mb-3">Contact Us</h4>
-                    <form method="POST" class="text-center">
-                        {% csrf_token %}
-                        {{ contact_form|crispy }}
-                        <input class="btn btn-dark btn-block" type="submit" value="Send">
-                    </form>
-                </div>
-            </div>
+        <div class="col-md-8 mt-3 offset-md-2">
+            <form method="post">
+                {% csrf_token %}
+                {{ contact_form|crispy }}
+                <button type="submit" class="btn btn-secondary btn-card btn-lg my-4">Send</button>
+            </form>
         </div>
     </div>
 </div>
-
 {% endblock %}
