--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mr-5">
               <li class="nav-item "><a class="nav-link" id="nav-link" href="{% url 'home' %}" >Home</a></li>
-              <li class="nav-item "><a class="nav-link" id="nav-link" href="#why-us" >About us</a></li>
+              <li class="nav-item "><a class="nav-link" id="nav-link" href="{% url 'about' %}" >About us</a></li>
               <li class="nav-item "><a class="nav-link" id="nav-link" href="#blog" >Blog</a></li>
               <li class="nav-item "><a class="nav-link" id="nav-link" href="{% url 'contact' %}" >Contact</a></li>
                 {% if request.user.is_authenticated %}
