--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
       <h2>Team</h2>
       <p>Partners at De Jure Law Firm</p>
     </div>
-  <div class="row pb-5 mb-4" id="team-section">
+  <div class="row pb-5" id="team-section">
   <!-- first card-->
     <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
       <div class="card shadow-sm border-0 rounded" >
@@ -152,66 +152,6 @@
     </div>
   </div>
 </section>
-
-<!-- blog -->
-<section id="blog" class="blog" >
-  <div class="container" data-aos="fade-up">
-    <div class="section-title">
-      <h2>Blog</h2>
-      <p>Latest News</p>
-    </div>
-  <div class="row">
-    <!-- Blog Entries Column -->
-      <div class="col-12 mt-3 left">
-          <div class="row">
-              {% for post in post_list %}
-              <div class="col-md-4">
-                  <div class="card mb-4">
-                      <div class="card-body">
-                          <div class="image-container">
-                              {% if "placeholder" in post.featured_image.url %}
-                              <img class="card-img-top"
-                                  src="">
-                              {% else %}
-                              <img class="card-img-top" src=" {{ post.featured_image.url }}">
-                              {% endif %}
-                              <div class="image-flash">
-                                  <p class="author">Author: {{ post.author }}</p>
-                              </div>
-                          </div>
-                          <a href="{% url 'post_detail' post.slug  %}" class="post-link">
-                              <h2 class="card-title">{{ post.title }}</h2>
-                              <p class="card-text">{{ post.excerpt }}</p>
-                          </a>
-                          <hr />
-                          <p class="card-text text-muted h6">{{ post.created_on}} <i class="far fa-heart"></i>
-                              {{ post.number_of_likes }}</p>
-                      </div>
-                  </div>
-              </div>
-              {% if forloop.counter|divisibleby:3 %}
-          </div>
-          <div class="row">
-              {% endif %}
-              {% endfor %}
-          </div>
-      </div>
-  </div>
-  {% if is_paginated %}
-  <nav aria-label="Page navigation">
-      <ul class="pagination justify-content-center">
-          {% if page_obj.has_previous %}
-          <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
-          {% endif %}
-          {% if page_obj.has_next %}
-          <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-
-          {% endif %}
-      </ul>
-  </nav>
-  {% endif %}
-</div>
-
 <!-- testimonials -->
 <section id="testimonial" class="testimonial" >
   <div class="container-lg" data-aos="fade-up">
