--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -3,20 +3,18 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-<div class="row">
-    <div class="col-md-5 offset-md-3">
-        <div class="card rounded m-2 shadow-sm border-0">
-            <div class="card-body p-4">
-                <h4 class="text-center">Sign Up</h4>
-                <hr style="border-top:double 10px;
-                    width: 60%;
-                    color:dimgrey;
-                ">
-                <form method="POST" class="text-center">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-                    <input class="btn btn-secondary btn-block" type="submit" value="Sign Up">
-                </form>
+<div class="container-fluid signup-container" style="min-height: 50vh;">
+    <div class="row">
+        <div class="col-sm-10 col-md-8 col-lg-6 offset-sm-1 offset-md-2 offset-lg-3">
+            <div class="card m-3 border-0">
+                <div class="card-body rounded text-white p-4 login-card">
+                    <h4 class="text-center mb-3">Sign Up</h4>
+                    <form method="POST" class="text-center">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <input class="btn btn-secondary mb-3" type="submit" value="Sign Up">
+                    </form>
+                </div>
             </div>
         </div>
     </div>
