--- a/templates/about.html
+++ b/templates/about.html
@@ -81,7 +81,7 @@
         <h2>Team</h2>
         <p>Partners at De Jure Law Firm</p>
       </div>
-    <div class="row pb-5 mb-4" id="team-section">
+    <div class="row pb-5" id="team-section">
     <!-- first card-->
       <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
         <div class="card shadow-sm border-0 rounded" >
