--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -3,22 +3,20 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-<div class="row">
-    <div class="col-md-5 offset-md-3">
-        <div class="card rounded m-2 shadow-sm border-0">
-          <p style="text-align:center;">If you have not created an account yet, then <a class="link" href="{{ signup_url }}">Sign up</a>
-            first.</p>
-            <div class="card-body p-4">
-                <h4 class="text-center">Log In</h4>
-                <hr style="border-top:double 10px;
-                           width: 60%;
-                           color:dimgrey; 
-                ">
-                <form method="POST" class="text-center">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-                    <input class="btn btn-secondary btn-block" type="submit" value="Log In">
-                </form>
+<div class="container-fluid login-container" style="min-height: 50vh;">
+    <div class="row">
+        <div class="col-sm-10 col-md-8 col-lg-6 offset-sm-1 offset-md-2 offset-lg-3">
+            
+            <div class="card m-3 border-0">
+                <div class="card-body rounded text-white p-4 login-card" style="margin-top: 50px;">
+                    <p style="text-align: center; ">If you have not created an account yet <a href="{{ signup_url }}" class="btn btn-outline-warning mt-2" style="margin-bottom: 10px; color: #cda45e; border-color: #cda45e">Create an Account</a></p>
+                    <h4 class="text-center mb-3">Log In</h4>
+                    <form method="POST" class="text-center">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <input class="btn btn-secondary mb-3" type="submit" value="Log In">
+                    </form>
+                </div>
             </div>
         </div>
     </div>
