--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -3,25 +3,18 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-<div class="row">
-    <div class="col-md-5 offset-md-3">
-        <div class="card rounded m-2 shadow-sm border-0">
-
-                <div class="card-body p-4">
-                    <h4 class="text-center">Log Out</h4>
-                    <hr style="border-top:double 10px;
-                               width: 60%;
-                               color:dimgrey; 
-                    ">
-                    <div class="alert alert-dark" role="alert" style="text-align: center;">
-                        Are you sure you want to log out?
-                      </div>
-            
+<div class="row confirmation-contaner" style="min-height: 50vh;">
+    <div class="col-md-8 col-lg-4 offset-md-2 offset-lg-4 mt-5">
+        <div class="card rounded m-2 shadow-sm border-0" style="background:rgba(0, 0, 0, 0.463)">
+            <div class="card-body rounded p-4 confirmation-card">
+                <div class="alert text-center p-4" style="color: white;">
+                   Are you sure you want to log out?
+                </div>
                 <form action="{% url 'account_logout' %}" method="POST" name="confirm" class="mt-5">
                     {% csrf_token %}
-                    <div class="d-flex flex-row justify-content-center logout-buttons">
-                        <input type="submit" class="btn btn-danger " value="Logout" name="logout">
-                        
+                    <div class="d-flex flex-row justify-content-between logout-buttons">
+                        <a href="{% url 'home' %}" class="btn btn-dark">Go home</a>
+                        <input type="submit" class="btn btn-danger" value="Logout" name="logout">
                     </div>
                 </form>
             </div>
