--- a/templates/delete-booking.html
+++ b/templates/delete-booking.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<div class="d-flex">
+<div class="d-flex" style="min-height: 50vh;">
     <div class=" text-center m-auto p-5">
         <h2 class="bookings-title mb-4">Delete your Booking</h2>
             <form method="POST">
